<resources>
    <string name="app_name">useFirebase</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="active_users">Active users:</string>
    <string name="deleted_users">Deleted users:</string>
</resources>